--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <hr>
-    <h1>nie patrz sie</h1>
-    <h2>tu</h2>
-    <hr>
-</body>
+<html>
+ <head>
+  <title>Strona główna</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+ </head>
+ <body>
+  <header>
+<a href="index.html"><img src="baner.jpg" alt="baner"></a>
+  </header>
+  <nav>
+<a href="strona1.html">- proste działania</a>
+<a href="strona2.php">- potęgowanie</a>
+  </nav>
+  <main>
+<p><i>Znajdujesz się na stronie o tematyce
+ matematycznej.</i></p>
+<p><i>Mój PESEL to: ......................</i></p>
+  </main>
+ </body>
 </html>
